# json-merge

./: .gitignore  CMakeLists.txt  README.md
gtests/: CMakeLists.txt  TestNlohmannMerger.cpp
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/file/: FileReader.cpp  FileWriter.cpp  FileWriter.hpp
src/merger/: IMerger.cpp  IMerger.hpp  NlohmannMerger.cpp  NlohmannMerger.hpp
src/reader/: FileReader.hpp
